# decision-tree-stuff

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
decision_tree_stuff/: __init__.py  dtree.py  splitting.py
tests/: test.py
